--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,4 @@
-<!--
-/*!
 
-=========================================================
-* Light Bootstrap Dashboard React - v1.3.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/light-bootstrap-dashboard-react
-* Copyright 2019 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/light-bootstrap-dashboard-react/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-*/
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -35,7 +17,7 @@
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
+      href="%PUBLIC_URL%/sits.png"
     />
 
     <!--
@@ -47,7 +29,7 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>Light Bootstrap Dashboard - React</title>
+    <title>MDM</title>
 
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
